--- a/web-ui/src/ui/styles/pages/_home.scss
+++ b/web-ui/src/ui/styles/pages/_home.scss
@@ -1,7 +1,7 @@
 .page__home {
   .logo {
     width: 600px;
-    max-width: 80%;
+    max-width: 90%;
     animation: shake 3s cubic-bezier(.36,.07,.19,.97) infinite;
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
